--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Curiosidades de Tecnologia</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo, Tech em um único lugar
+        <h1>GIGI-PAU PEQUENO</h1>
+        <p>Tudo aquilo que você sempre quis saber sobre o pau no gigi
         </p>
     </header>
     <nav>
@@ -24,7 +24,7 @@
     <main>
         <article>
 
-        <h1>História do Mascote do Android</h1>
+        <h1>História do MicroPenis do GIGI</h1>
 
         <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.
         </p>
