--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
     <p>Site criado por <a href="https://clinicanutrimente.com.br/contato/" target="_blank">Lucas Andrade</a> para o CursoemVideo.</p>
 
     </footer>
-    
+    <script src="app.js"></script>
 </body>
 </html>
